# algo-sensei

./: .gitignore  README.md
backend/: .env.example  README.md  log_conf.dev.yaml  log_conf.prod.yaml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: agent.py  dependency.py  router.py  schemas.py  service.py
backend/app/agents/.adk/: session.db
backend/app/auth/: dependency.py  repository.py  router.py  schemas.py  service.py  user.py
backend/app/config/: database.py  log.py  settings.py
backend/app/middlewares/: authentication.py  cors.py
backend/app/models/: __init__.py  user.py  users.py
backend/app/schemas/: auth_schemas.py
backend/app/utils/: exceptions.py
backend/json_config/: log_conf.dev.yaml
backend/tests/auth/: README.md  conftest.py  test_auth_router.py  test_auth_service.py
extension/: index.html  manifest.json  package.json  vite.config.ts
extension/src/: App.tsx  background.ts  index.css
extension/src/components/sidepanel/: header.tsx  sidePanel.tsx  tabToggle.tsx
extension/src/components/sidepanel/tabs/: home.tsx  page.tsx  profile.tsx  settings.tsx
extension/src/components/ui/: tabs.tsx
extension/src/config/: env.ts
extension/src/content-scripts/: leetcodeContent.ts  panel-trigger.ts
extension/src/hooks/: use-settings.ts
